@@ -22,7 +22,7 @@ t/03_child.t
 t/04_condvar.t
 t/handle/00_load.t
 t/handle/01_readline.t
-#	t/handle/02_write.t
+t/handle/02_write.t
 #	t/handle/03_http_req.t
 #	t/handle/04_listen.t
 eg/bench
